# TCC

./: .gitignore  CMakeLists.txt
src/: Utils.cpp  main.cpp
src/core/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/shaders/: fragment.glsl  vertex.glsl
src/shapes/: CMakeLists.txt  Sphere.cpp  Sphere.h
src/util/: CMakeLists.txt  Util.cpp  Util.h
src/utils/: CMakeLists.txt  Utils.cpp  Utils.h
